[gd_scene load_steps=21 format=3 uid="uid://cyq7p1m4dlfly"]

[ext_resource type="Script" path="res://Rocket/Rocket.gd" id="1_8fh8w"]
[ext_resource type="PackedScene" uid="uid://bk1c1423so2mh" path="res://Rocket/FireOnParts.tscn" id="2_8ahoy"]
[ext_resource type="Material" uid="uid://lqjkdlqshl5l" path="res://Rocket/Materials/M_RocketBody.tres" id="2_gkpmn"]
[ext_resource type="Material" uid="uid://b84co07v4brp1" path="res://Rocket/Materials/M_RocketBooster.tres" id="3_6knww"]
[ext_resource type="PackedScene" uid="uid://e8nor3p7u8oc" path="res://Rocket/FootPrints.tscn" id="3_rw5id"]
[ext_resource type="PhysicsMaterial" uid="uid://dgc2xurjeb3f8" path="res://Rocket/Materials/PM_RocketFoot.tres" id="4_daakr"]
[ext_resource type="SphereMesh" uid="uid://den74hg54dxup" path="res://Rocket/Meshes/SM_RocketGas.tres" id="4_jflvw"]
[ext_resource type="AudioStream" uid="uid://b1g0vdmshtn8t" path="res://Rocket/Sounds/Thruster.wav" id="7_fntrd"]
[ext_resource type="AudioStream" uid="uid://472bxia1ye8v" path="res://Rocket/Sounds/Crash.wav" id="8_8tjct"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_xd37k"]
bounce = 0.1

[sub_resource type="CylinderMesh" id="CylinderMesh_0ekqf"]
material = ExtResource("2_gkpmn")
height = 0.25

[sub_resource type="CylinderShape3D" id="CylinderShape3D_drmm2"]
height = 0.25

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y835b"]
albedo_color = Color(0, 0.392157, 0.431373, 1)
metallic = 0.7
roughness = 0.8

[sub_resource type="SphereMesh" id="SphereMesh_uj1t6"]
material = SubResource("StandardMaterial3D_y835b")
radial_segments = 6
rings = 2

[sub_resource type="SphereShape3D" id="SphereShape3D_gx4o2"]

[sub_resource type="CylinderMesh" id="CylinderMesh_kuab7"]
material = ExtResource("3_6knww")
top_radius = 0.1
bottom_radius = 0.2
height = 0.1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_huy34"]
height = 0.1
radius = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_o41a4"]
albedo_color = Color(0, 0, 0, 1)
metallic = 1.0
roughness = 0.0

[sub_resource type="CylinderMesh" id="CylinderMesh_uee10"]
material = SubResource("StandardMaterial3D_o41a4")
top_radius = 0.025
bottom_radius = 0.025
height = 0.075
radial_segments = 6
rings = 2

[sub_resource type="CylinderShape3D" id="CylinderShape3D_afu5n"]
height = 0.075
radius = 0.025

[node name="Rocket" type="Node3D"]
script = ExtResource("1_8fh8w")
fire_parts = ExtResource("2_8ahoy")
foot_prints = ExtResource("3_rw5id")

[node name="AudioCrash" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_8tjct")
volume_db = 5.0

[node name="Body" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
mass = 150.0
physics_material_override = SubResource("PhysicsMaterial_xd37k")
continuous_cd = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body"]
mesh = SubResource("CylinderMesh_0ekqf")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body"]
shape = SubResource("CylinderShape3D_drmm2")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("SphereMesh_uj1t6")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("SphereShape3D_gx4o2")

[node name="SpotLight3D" type="SpotLight3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
light_color = Color(1, 0, 0.0156863, 1)
light_energy = 3.0
shadow_enabled = true
distance_fade_enabled = true
distance_fade_begin = 10.0
spot_range = 45.0
spot_angle = 30.0
spot_angle_attenuation = 1.7411

[node name="FootZpHinge" type="HingeJoint3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0.47)
node_a = NodePath("..")
node_b = NodePath("FootZp")
angular_limit/enable = true
angular_limit/upper = 0.0
angular_limit/lower = 0.0

[node name="FootZp" type="RigidBody3D" parent="Body/FootZpHinge"]
physics_material_override = ExtResource("4_daakr")
continuous_cd = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body/FootZpHinge/FootZp"]
mesh = SubResource("CylinderMesh_kuab7")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body/FootZpHinge/FootZp"]
shape = SubResource("CylinderShape3D_huy34")

[node name="Particles3D" type="CPUParticles3D" parent="Body/FootZpHinge/FootZp"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0646423, 0)
amount = 16
mesh = ExtResource("4_jflvw")
direction = Vector3(0, -1, 0)
spread = 20.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 0.2
initial_velocity_max = 0.7

[node name="FootZnHinge" type="HingeJoint3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, -0.47)
node_a = NodePath("..")
node_b = NodePath("FootZn")
angular_limit/enable = true
angular_limit/upper = 0.0
angular_limit/lower = 0.0

[node name="FootZn" type="RigidBody3D" parent="Body/FootZnHinge"]
physics_material_override = ExtResource("4_daakr")
continuous_cd = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body/FootZnHinge/FootZn"]
mesh = SubResource("CylinderMesh_kuab7")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body/FootZnHinge/FootZn"]
shape = SubResource("CylinderShape3D_huy34")

[node name="Particles3D" type="CPUParticles3D" parent="Body/FootZnHinge/FootZn"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.065, 0)
amount = 16
mesh = ExtResource("4_jflvw")
direction = Vector3(0, -1, 0)
spread = 20.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 0.2
initial_velocity_max = 0.7

[node name="FootXpHinge" type="HingeJoint3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.47, -0.2, 0)
node_a = NodePath("..")
node_b = NodePath("FootXp")
angular_limit/enable = true
angular_limit/upper = 0.0
angular_limit/lower = 0.0

[node name="FootXp" type="RigidBody3D" parent="Body/FootXpHinge"]
physics_material_override = ExtResource("4_daakr")
continuous_cd = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body/FootXpHinge/FootXp"]
mesh = SubResource("CylinderMesh_kuab7")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body/FootXpHinge/FootXp"]
shape = SubResource("CylinderShape3D_huy34")

[node name="Particles3D" type="CPUParticles3D" parent="Body/FootXpHinge/FootXp"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.065, 0)
amount = 16
mesh = ExtResource("4_jflvw")
direction = Vector3(0, -1, 0)
spread = 20.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 0.2
initial_velocity_max = 0.7

[node name="FootXnHinge" type="HingeJoint3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.47, -0.2, 0)
node_a = NodePath("..")
node_b = NodePath("FootXn")
angular_limit/enable = true
angular_limit/upper = 0.0
angular_limit/lower = 0.0

[node name="FootXn" type="RigidBody3D" parent="Body/FootXnHinge"]
physics_material_override = ExtResource("4_daakr")
continuous_cd = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body/FootXnHinge/FootXn"]
mesh = SubResource("CylinderMesh_kuab7")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body/FootXnHinge/FootXn"]
shape = SubResource("CylinderShape3D_huy34")

[node name="Particles3D" type="CPUParticles3D" parent="Body/FootXnHinge/FootXn"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.065, 0)
amount = 16
mesh = ExtResource("4_jflvw")
direction = Vector3(0, -1, 0)
spread = 20.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 0.2
initial_velocity_max = 0.7

[node name="AudioThruster" type="AudioStreamPlayer" parent="Body"]
stream = ExtResource("7_fntrd")

[node name="ConeTwistJoint3D" type="ConeTwistJoint3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.128854, 0)
node_a = NodePath("..")
node_b = NodePath("RigidBody3D")
swing_span = 0.523599
twist_span = 0.0

[node name="RigidBody3D" type="RigidBody3D" parent="Body/ConeTwistJoint3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body/ConeTwistJoint3D/RigidBody3D"]
mesh = SubResource("CylinderMesh_uee10")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body/ConeTwistJoint3D/RigidBody3D"]
shape = SubResource("CylinderShape3D_afu5n")

[node name="Marker3D" type="Marker3D" parent="Body/ConeTwistJoint3D/RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)
